grobe struktur erstellt + logo eingebunden

--- a/index.html
+++ b/index.html
@@ -18,9 +18,30 @@
 <!--                                                      body-section -->
     <body>
         <div id="pageWrapper">
-            <!-- INSERT CONTENT HERE -->
-            
+            <main>
+                <section class="mainSection" id="home">
 
+                </section>
+                <!-- todo: more sections -->
+            </main>
+            <aside></aside>
+            <nav>
+                <ul class="pageNav">
+                    <li class="pageNavItem"><a href="#" class="pageNavLink">Willkommen</a></li>
+                    <li class="pageNavItem"><a href="#" class="pageNavLink">Willkommen</a></li>
+                    <li class="pageNavItem"><a href="#" class="pageNavLink">Willkommen</a></li>
+                    <li class="pageNavItem"><a href="#" class="pageNavLink">Willkommen</a></li>
+                </ul>
+            </nav>
+            <header>
+                <div class="pageLogo">
+                    <img src="img/logo.svg" alt="Logo der Tierrettung Essen e.V.">
+                </div>
+                <div id="pageTitle">Tierrettung Essen e.V.</div>
+            </header>
+            <footer>
+                <!-- todo: insert some footer-stuff -->
+            </footer>
         </div>
 <!--                                                           Scripts -->
         <!-- <script src="FILENAME.js"></script> -->
