--- a/index.html
+++ b/index.html
@@ -20,19 +20,61 @@
         <div id="pageWrapper">
             <main>
                 <section class="mainSection" id="home">
-
+                    <!-- todo: add content -->
                 </section>
-                <!-- todo: more sections -->
+
+                <section class="mainSection" id="services">
+                    <!-- todo: add content -->
+                </section>
+
+                <section class="mainSection" id="engagement">
+                    <!-- todo: add content -->
+                </section>
+
+                <section class="mainSection" id="partner">
+                    <!-- todo: add content -->
+                </section>
+
+                <section class="mainSection" id="blog">
+                    <!-- todo: add content -->
+                </section>
+
+                <section class="mainSection" id="contact">
+                    <!-- todo: add content -->
+                </section>
             </main>
-            <aside></aside>
+            <aside>
+                <form action="" id="loginForm">
+                    <div class="formElementGroup">
+                        <label for="username">Username</label>
+                        <input type="text" name="uName" id="uName">
+                    </div>
+                    <div class="formElementGroup">
+                        <label for="passWord">Password</label>
+                        <input type="password" name="passWord" id="passWord">
+                    </div>
+                    <button type="button">Login</button>
+                    <div class="loginLinks">
+                        <a href="#" class="loginLink">Password vergessen?</a>
+                        <a href="#" class="register">Registrieren!</a>
+                    </div>
+                </form>
+            </aside>
             <nav>
                 <ul class="pageNav">
-                    <li class="pageNavItem"><a href="#" class="pageNavLink">Willkommen</a></li>
-                    <li class="pageNavItem"><a href="#" class="pageNavLink">Willkommen</a></li>
-                    <li class="pageNavItem"><a href="#" class="pageNavLink">Willkommen</a></li>
-                    <li class="pageNavItem"><a href="#" class="pageNavLink">Willkommen</a></li>
+                    <li class="pageNavItem"><a href="#home" class="pageNavLink">Willkommen</a></li>
+                    <li class="pageNavItem"><a href="#services" class="pageNavLink">Leistungen / Preise</a></li>
+                    <li class="pageNavItem"><a href="#engagement" class="pageNavLink">Unser Engagement</a></li>
+                    <li class="pageNavItem"><a href="#partner" class="pageNavLink">Unsere Partner</a></li>
+                    <li class="pageNavItem"><a href="blog" class="pageNavLink">Blog</a></li>
+                    <li class="pageNavItem"><a href="contact" class="pageNavLink">Kontakt</a></li>
                 </ul>
             </nav>
+            <div id="importantContainer">
+                <p class="important">Notruf: 0201 - 85 77 47 92</p>
+                <p class="important">Skype: tierrettungessen</p>
+                <p class="important">WhatsApp: 0163 - 33 44 114</p>
+            </div>
             <header>
                 <div class="pageLogo">
                     <img src="img/logo.svg" alt="Logo der Tierrettung Essen e.V.">
@@ -40,7 +82,24 @@
                 <div id="pageTitle">Tierrettung Essen e.V.</div>
             </header>
             <footer>
-                <!-- todo: insert some footer-stuff -->
+                <div class="footerBox">
+                    <p>
+                        Tierrettung Essen e. V. <br>
+                        Korthover Weg 65 <br>
+                        45307 Essen
+                    </p>
+                    <p>
+                        Tel. 0201 85774792
+                    </p>
+                </div>
+                <div class="footerBox">
+                    <p>&copy; Tierrettung Essen e.V. 2022</p>
+                </div>
+                <div class="footerBox">
+                    <a href="#" class="footerLink">Datenschutzerklärung</a>
+                    <a href="#" class="footerLink">AGB</a>
+                    <a href="#" class="footerLink">Impressum</a>
+                </div>
             </footer>
         </div>
 <!--                                                           Scripts -->
