blindtext hinzugefügt #+ grundlegendes Layout f. kleine Viewports erstellt

--- a/index.html
+++ b/index.html
@@ -21,26 +21,32 @@
             <main>
                 <section class="mainSection" id="home">
                     <!-- todo: add content -->
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, harum alias! Mollitia repudiandae necessitatibus maiores non rem aperiam velit dolores praesentium adipisci? Tempore, molestias minima. Nam tenetur in id deleniti doloremque minus quae vero ex. Nam, tempora dolores debitis maxime excepturi incidunt sunt explicabo earum deleniti illum eos, doloremque voluptatum cumque enim quas, numquam nihil expedita dignissimos nemo aspernatur blanditiis quidem iusto. Odit nulla optio quis nesciunt sint labore voluptate quod. Beatae ad amet dolores architecto eius velit, repellat eos enim, distinctio deserunt odio totam soluta consequuntur cupiditate eaque, nihil tempora in iusto nisi omnis! Fugit vel saepe ratione id?
                 </section>
 
                 <section class="mainSection" id="services">
                     <!-- todo: add content -->
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, harum alias! Mollitia repudiandae necessitatibus maiores non rem aperiam velit dolores praesentium adipisci? Tempore, molestias minima. Nam tenetur in id deleniti doloremque minus quae vero ex. Nam, tempora dolores debitis maxime excepturi incidunt sunt explicabo earum deleniti illum eos, doloremque voluptatum cumque enim quas, numquam nihil expedita dignissimos nemo aspernatur blanditiis quidem iusto. Odit nulla optio quis nesciunt sint labore voluptate quod. Beatae ad amet dolores architecto eius velit, repellat eos enim, distinctio deserunt odio totam soluta consequuntur cupiditate eaque, nihil tempora in iusto nisi omnis! Fugit vel saepe ratione id?
                 </section>
 
                 <section class="mainSection" id="engagement">
                     <!-- todo: add content -->
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, harum alias! Mollitia repudiandae necessitatibus maiores non rem aperiam velit dolores praesentium adipisci? Tempore, molestias minima. Nam tenetur in id deleniti doloremque minus quae vero ex. Nam, tempora dolores debitis maxime excepturi incidunt sunt explicabo earum deleniti illum eos, doloremque voluptatum cumque enim quas, numquam nihil expedita dignissimos nemo aspernatur blanditiis quidem iusto. Odit nulla optio quis nesciunt sint labore voluptate quod. Beatae ad amet dolores architecto eius velit, repellat eos enim, distinctio deserunt odio totam soluta consequuntur cupiditate eaque, nihil tempora in iusto nisi omnis! Fugit vel saepe ratione id?
                 </section>
 
                 <section class="mainSection" id="partner">
                     <!-- todo: add content -->
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, harum alias! Mollitia repudiandae necessitatibus maiores non rem aperiam velit dolores praesentium adipisci? Tempore, molestias minima. Nam tenetur in id deleniti doloremque minus quae vero ex. Nam, tempora dolores debitis maxime excepturi incidunt sunt explicabo earum deleniti illum eos, doloremque voluptatum cumque enim quas, numquam nihil expedita dignissimos nemo aspernatur blanditiis quidem iusto. Odit nulla optio quis nesciunt sint labore voluptate quod. Beatae ad amet dolores architecto eius velit, repellat eos enim, distinctio deserunt odio totam soluta consequuntur cupiditate eaque, nihil tempora in iusto nisi omnis! Fugit vel saepe ratione id?
                 </section>
 
                 <section class="mainSection" id="blog">
                     <!-- todo: add content -->
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, harum alias! Mollitia repudiandae necessitatibus maiores non rem aperiam velit dolores praesentium adipisci? Tempore, molestias minima. Nam tenetur in id deleniti doloremque minus quae vero ex. Nam, tempora dolores debitis maxime excepturi incidunt sunt explicabo earum deleniti illum eos, doloremque voluptatum cumque enim quas, numquam nihil expedita dignissimos nemo aspernatur blanditiis quidem iusto. Odit nulla optio quis nesciunt sint labore voluptate quod. Beatae ad amet dolores architecto eius velit, repellat eos enim, distinctio deserunt odio totam soluta consequuntur cupiditate eaque, nihil tempora in iusto nisi omnis! Fugit vel saepe ratione id?
                 </section>
 
                 <section class="mainSection" id="contact">
                     <!-- todo: add content -->
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, harum alias! Mollitia repudiandae necessitatibus maiores non rem aperiam velit dolores praesentium adipisci? Tempore, molestias minima. Nam tenetur in id deleniti doloremque minus quae vero ex. Nam, tempora dolores debitis maxime excepturi incidunt sunt explicabo earum deleniti illum eos, doloremque voluptatum cumque enim quas, numquam nihil expedita dignissimos nemo aspernatur blanditiis quidem iusto. Odit nulla optio quis nesciunt sint labore voluptate quod. Beatae ad amet dolores architecto eius velit, repellat eos enim, distinctio deserunt odio totam soluta consequuntur cupiditate eaque, nihil tempora in iusto nisi omnis! Fugit vel saepe ratione id?
                 </section>
             </main>
             <aside>
