importantContainer gestylt + ein/ausblenden  via click und touchstart impl.

--- a/index.html
+++ b/index.html
@@ -77,9 +77,14 @@
                 </ul>
             </nav>
             <div id="importantContainer">
-                <p class="important">Notruf: 0201 - 85 77 47 92</p>
-                <p class="important">Skype: tierrettungessen</p>
-                <p class="important">WhatsApp: 0163 - 33 44 114</p>
+                <div id="impCSwitch">
+                    <div>NOTRUF</div> <img src="img/angles-left-solid.svg" alt="Pfeile links"> <div>NOTRUF</div>
+                </div>
+                <div id="impContent">
+                    <p class="important">Telefon:<br> <strong>0201 - 85 77 47 92</strong></p>
+                    <p class="important">Skype:<br> <strong>tierrettungessen</strong></p>
+                    <p class="important">WhatsApp:<br> <strong>0163 - 33 44 114</strong></p>
+                </div>
             </div>
             <header>
                 <div class="pageLogo">
@@ -109,7 +114,7 @@
             </footer>
         </div>
 <!--                                                           Scripts -->
-        <!-- <script src="FILENAME.js"></script> -->
+        <script src="script/script.js"></script>
     </body>
 
 </html>
