pageNav gestylt + ein/ausbelenden mit button impl

--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
                 </form>
             </aside>
             <nav>
-                <ul class="pageNav">
+                <div id="navButton">
+                    <div id="buttonElement"></div>
+                </div>
+                <ul id="pageNav">
                     <li class="pageNavItem"><a href="#home" class="pageNavLink">Willkommen</a></li>
                     <li class="pageNavItem"><a href="#services" class="pageNavLink">Leistungen / Preise</a></li>
                     <li class="pageNavItem"><a href="#engagement" class="pageNavLink">Unser Engagement</a></li>
