importantContainer neu gestaltet

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
             </nav>
             <div id="importantContainer">
                 <div id="impCSwitch">
-                    <div>NOTRUF</div> <img src="img/angles-left-solid.svg" alt="Pfeile links"> <div>NOTRUF</div>
+                    <img src="img/truck-medical-solid.svg" alt="Pfeile links"> 
+                    <div>NOTRUF</div>
                 </div>
                 <div id="impContent">
                     <p class="important">Telefon:<br> <strong>0201 - 85 77 47 92</strong></p>
