pageNav- + layout-Anpassungen f. kleine vp

--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
                     <li class="pageNavItem"><a href="blog" class="pageNavLink">Blog</a></li>
                     <li class="pageNavItem"><a href="contact" class="pageNavLink">Kontakt</a></li>
                 </ul>
+
+                <div id="smallNavHeader">
+                    <div>Tierrettung<br> Essen e.V.</div>
+                    <img src="img/logo.svg" alt="Logo der Tierrettung Essen e. V." id="navLogo">
+                </div>
             </nav>
             <div id="importantContainer">
                 <div id="impCSwitch">
