--- a/index.html
+++ b/index.html
@@ -20,32 +20,45 @@
         <div id="pageWrapper">
             <main>
                 <section class="mainSection" id="home">
-                    <!-- todo: add content -->
+                    <header class="sectionHeader">
+                        <h1 class="sectionTitle">Willkommen</h1>
+                    </header>
+                    Test
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, harum alias! Mollitia repudiandae necessitatibus maiores non rem aperiam velit dolores praesentium adipisci? Tempore, molestias minima. Nam tenetur in id deleniti doloremque minus quae vero ex. Nam, tempora dolores debitis maxime excepturi incidunt sunt explicabo earum deleniti illum eos, doloremque voluptatum cumque enim quas, numquam nihil expedita dignissimos nemo aspernatur blanditiis quidem iusto. Odit nulla optio quis nesciunt sint labore voluptate quod. Beatae ad amet dolores architecto eius velit, repellat eos enim, distinctio deserunt odio totam soluta consequuntur cupiditate eaque, nihil tempora in iusto nisi omnis! Fugit vel saepe ratione id?
                 </section>
 
                 <section class="mainSection" id="services">
-                    <!-- todo: add content -->
+                    <header class="sectionHeader">
+                        <h2 class="sectionTitle">Leistungen / Preise</h2>
+                    </header>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, harum alias! Mollitia repudiandae necessitatibus maiores non rem aperiam velit dolores praesentium adipisci? Tempore, molestias minima. Nam tenetur in id deleniti doloremque minus quae vero ex. Nam, tempora dolores debitis maxime excepturi incidunt sunt explicabo earum deleniti illum eos, doloremque voluptatum cumque enim quas, numquam nihil expedita dignissimos nemo aspernatur blanditiis quidem iusto. Odit nulla optio quis nesciunt sint labore voluptate quod. Beatae ad amet dolores architecto eius velit, repellat eos enim, distinctio deserunt odio totam soluta consequuntur cupiditate eaque, nihil tempora in iusto nisi omnis! Fugit vel saepe ratione id?
                 </section>
 
                 <section class="mainSection" id="engagement">
-                    <!-- todo: add content -->
+                    <header class="sectionHeader">
+                        <h2 class="sectionTitle">Unser Engagement</h2>
+                    </header>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, harum alias! Mollitia repudiandae necessitatibus maiores non rem aperiam velit dolores praesentium adipisci? Tempore, molestias minima. Nam tenetur in id deleniti doloremque minus quae vero ex. Nam, tempora dolores debitis maxime excepturi incidunt sunt explicabo earum deleniti illum eos, doloremque voluptatum cumque enim quas, numquam nihil expedita dignissimos nemo aspernatur blanditiis quidem iusto. Odit nulla optio quis nesciunt sint labore voluptate quod. Beatae ad amet dolores architecto eius velit, repellat eos enim, distinctio deserunt odio totam soluta consequuntur cupiditate eaque, nihil tempora in iusto nisi omnis! Fugit vel saepe ratione id?
                 </section>
 
                 <section class="mainSection" id="partner">
-                    <!-- todo: add content -->
+                    <header class="sectionHeader">
+                        <h2 class="sectionTitle">Unsere Partner</h2>
+                    </header>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, harum alias! Mollitia repudiandae necessitatibus maiores non rem aperiam velit dolores praesentium adipisci? Tempore, molestias minima. Nam tenetur in id deleniti doloremque minus quae vero ex. Nam, tempora dolores debitis maxime excepturi incidunt sunt explicabo earum deleniti illum eos, doloremque voluptatum cumque enim quas, numquam nihil expedita dignissimos nemo aspernatur blanditiis quidem iusto. Odit nulla optio quis nesciunt sint labore voluptate quod. Beatae ad amet dolores architecto eius velit, repellat eos enim, distinctio deserunt odio totam soluta consequuntur cupiditate eaque, nihil tempora in iusto nisi omnis! Fugit vel saepe ratione id?
                 </section>
 
                 <section class="mainSection" id="blog">
-                    <!-- todo: add content -->
+                    <header class="sectionHeader">
+                        <h2 class="sectionTitle">Blog</h2>
+                    </header>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, harum alias! Mollitia repudiandae necessitatibus maiores non rem aperiam velit dolores praesentium adipisci? Tempore, molestias minima. Nam tenetur in id deleniti doloremque minus quae vero ex. Nam, tempora dolores debitis maxime excepturi incidunt sunt explicabo earum deleniti illum eos, doloremque voluptatum cumque enim quas, numquam nihil expedita dignissimos nemo aspernatur blanditiis quidem iusto. Odit nulla optio quis nesciunt sint labore voluptate quod. Beatae ad amet dolores architecto eius velit, repellat eos enim, distinctio deserunt odio totam soluta consequuntur cupiditate eaque, nihil tempora in iusto nisi omnis! Fugit vel saepe ratione id?
                 </section>
 
                 <section class="mainSection" id="contact">
-                    <!-- todo: add content -->
+                    <header class="sectionHeader">
+                        <h2 class="sectionTitle">Kontakt</h2>
+                    </header>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, harum alias! Mollitia repudiandae necessitatibus maiores non rem aperiam velit dolores praesentium adipisci? Tempore, molestias minima. Nam tenetur in id deleniti doloremque minus quae vero ex. Nam, tempora dolores debitis maxime excepturi incidunt sunt explicabo earum deleniti illum eos, doloremque voluptatum cumque enim quas, numquam nihil expedita dignissimos nemo aspernatur blanditiis quidem iusto. Odit nulla optio quis nesciunt sint labore voluptate quod. Beatae ad amet dolores architecto eius velit, repellat eos enim, distinctio deserunt odio totam soluta consequuntur cupiditate eaque, nihil tempora in iusto nisi omnis! Fugit vel saepe ratione id?
                 </section>
             </main>
@@ -95,10 +108,9 @@
                     <p class="important">WhatsApp:<br> <strong>0163 - 33 44 114</strong></p>
                 </div>
             </div>
-            <header>
-                <div class="pageLogo">
-                    <img src="img/logo.svg" alt="Logo der Tierrettung Essen e.V.">
-                </div>
+            <header id="pageHeader">
+                <img src="img/logo.svg" alt="Logo der Tierrettung Essen e.V.">
+                
                 <div id="pageTitle">Tierrettung Essen e.V.</div>
             </header>
             <footer>
