body bg angepasst + korrekturen

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 </section>
             </main>
             <aside>
+                <h3>Login</h3>
                 <form action="" id="loginForm">
                     <div class="formElementGroup">
                         <label for="username">Username</label>
@@ -89,8 +90,8 @@
                     <li class="pageNavItem"><a href="#services" class="pageNavLink">Leistungen / Preise</a></li>
                     <li class="pageNavItem"><a href="#engagement" class="pageNavLink">Unser Engagement</a></li>
                     <li class="pageNavItem"><a href="#partner" class="pageNavLink">Unsere Partner</a></li>
-                    <li class="pageNavItem"><a href="blog" class="pageNavLink">Blog</a></li>
-                    <li class="pageNavItem"><a href="contact" class="pageNavLink">Kontakt</a></li>
+                    <li class="pageNavItem"><a href="#blog" class="pageNavLink">Blog</a></li>
+                    <li class="pageNavItem"><a href="#contact" class="pageNavLink">Kontakt</a></li>
                 </ul>
 
                 <div id="smallNavHeader">
@@ -110,7 +111,7 @@
                 </div>
             </div>
             <header id="pageHeader">
-                <img src="img/logo.svg" alt="Logo der Tierrettung Essen e.V.">
+                <img src="img/logo.svg" alt="Logo der Tierrettung Essen e. V.">
                 
                 <div id="pageTitle">Tierrettung Essen e.V.</div>
             </header>
