autofokus und placeholder in loginForm ergänzt

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
                 <form action="" id="loginForm">
                     <div class="formElementGroup">
                         <label for="username">Username</label>
-                        <input type="text" name="uName" id="uName">
+                        <input type="text" name="uName" id="uName" autofocus>
                     </div>
                     <div class="formElementGroup">
                         <label for="passWord">Password</label>
-                        <input type="password" name="passWord" id="passWord">
+                        <input type="password" name="passWord" id="passWord" placeholder="**********">
                     </div>
                     <button type="submit">Login</button>
                     <div class="loginLinks">
