nav und header neu arrangiert + login-form visibility dynamische anpassung, abhängig v. vp-breite

--- a/index.html
+++ b/index.html
@@ -59,6 +59,39 @@
                                 </div>
                             </article>
 
+                            <article>
+                                <header class="articleHeader">
+                                    <h3>Wasserrettung</h3>
+                                </header>
+                                <div class="articleContent">
+                                    <p class="contentText">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ipsam maxime eaque molestiae, optio dolores? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates, officiis.
+                                    </p>
+                                </div>
+                            </article>
+
+                            <article>
+                                <header class="articleHeader">
+                                    <h3>Auslands-Rückholdienst</h3>
+                                </header>
+                                <div class="articleContent">
+                                    <p class="contentText">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ipsam maxime eaque molestiae, optio dolores? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates, officiis.
+                                    </p>
+                                </div>
+                            </article>
+
+                            <article>
+                                <header class="articleHeader">
+                                    <h3>Medikamententransport</h3>
+                                </header>
+                                <div class="articleContent">
+                                    <p class="contentText">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ipsam maxime eaque molestiae, optio dolores? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates, officiis.
+                                    </p>
+                                </div>
+                            </article>
+
                         </div>
 
 
@@ -94,22 +127,25 @@
                 </section>
             </main>
             <aside>
-                <h3>Login</h3>
-                <form action="" id="loginForm">
-                    <div class="formElementGroup">
-                        <label for="username">Username</label>
-                        <input type="text" name="uName" id="uName" autofocus>
-                    </div>
-                    <div class="formElementGroup">
-                        <label for="passWord">Password</label>
-                        <input type="password" name="passWord" id="passWord" placeholder="**********">
-                    </div>
-                    <button type="submit">Login</button>
-                    <div class="loginLinks">
-                        <a href="#" class="loginLink">Password vergessen?</a>
-                        <a href="#" class="loginLink">Registrieren!</a>
-                    </div>
-                </form>
+                <details id="loginContainer">
+
+                    <summary class="assideTitle">Login</summary>
+                    <form action="" id="loginForm">
+                        <div class="formElementGroup">
+                            <label for="username">Username</label>
+                            <input type="text" name="uName" id="uName" autofocus>
+                        </div>
+                        <div class="formElementGroup">
+                            <label for="passWord">Password</label>
+                            <input type="password" name="passWord" id="passWord" placeholder="**********">
+                        </div>
+                        <button type="submit">Login</button>
+                        <div class="loginLinks">
+                            <a href="#" class="loginLink">Password vergessen?</a>
+                            <a href="#" class="loginLink">Registrieren!</a>
+                        </div>
+                    </form>
+                </details>
             </aside>
             <nav>
                 <div id="navButton">
