article Überschr. editiert, line-height korrigiert

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <div class="articleContainer">
                             <article>
                                 <header class="articleHeader">
-                                    <h3>Intensivmedizinische Verlegungen</h3>
+                                    <h3>Verlegungen</h3>
                                 </header>
                                 <div class="articleContent">
                                     <p class="contentText">
@@ -72,7 +72,7 @@
 
                             <article>
                                 <header class="articleHeader">
-                                    <h3>Auslands-Rückholdienst</h3>
+                                    <h3>Rückholung aus dem Ausland</h3>
                                 </header>
                                 <div class="articleContent">
                                     <p class="contentText">
@@ -83,7 +83,7 @@
 
                             <article>
                                 <header class="articleHeader">
-                                    <h3>Medikamententransport</h3>
+                                    <h3>Transport von Medikamenten</h3>
                                 </header>
                                 <div class="articleContent">
                                     <p class="contentText">
