--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ipsam maxime eaque molestiae, optio dolores? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates, officiis.
                                     </p>
                                 </div>
+                                <div class="expandButton">
+                                    <div class="expandButtonElement"></div>
+                                </div>
                             </article>
 
                             <article>
@@ -67,6 +70,9 @@
                                     <p class="contentText">
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ipsam maxime eaque molestiae, optio dolores? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates, officiis.
                                     </p>
+                                </div>
+                                <div class="expandButton">
+                                    <div class="expandButtonElement"></div>
                                 </div>
                             </article>
 
@@ -79,6 +85,9 @@
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ipsam maxime eaque molestiae, optio dolores? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates, officiis.
                                     </p>
                                 </div>
+                                <div class="expandButton">
+                                    <div class="expandButtonElement"></div>
+                                </div>
                             </article>
 
                             <article>
@@ -89,6 +98,9 @@
                                     <p class="contentText">
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ipsam maxime eaque molestiae, optio dolores? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates, officiis.
                                     </p>
+                                </div>
+                                <div class="expandButton">
+                                    <div class="expandButtonElement"></div>
                                 </div>
                             </article>
 
