--- a/index.html
+++ b/index.html
@@ -268,6 +268,13 @@
                 </div>
                 <div class="footerBox">
                     <p>&copy; Tierrettung Essen e.V. 2022</p>
+                    <p>
+                        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                            <img style="border:0;width:88px;height:31px"
+                                src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                                alt="CSS ist valide!" />
+                            </a>
+                        </p>
                 </div>
                 <div class="footerBox">
                     <a href="#" class="footerLink">Datenschutzerklärung</a>
