--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Asap+Condensed:ital,wght@0,400;0,700;1,400;1,800&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="style/style.css">
+        <link rel="shortcut icon" href="img/logo.svg" type="image/x-icon">
 
     </head>
 
